--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,24 @@
-<div>Angular 6</div>
-<mat-toolbar>My App</mat-toolbar>
+<!-- <div style="height: 100vh;">
+    <mat-toolbar color="accent">
+      <span>Responsive Navigation</span>
+      <span class="example-spacer"></span>
+      <div fxShow="true" fxHide.lt-md="true">
+        <a href="#" mat-button>Menu Item 1</a>
+        <a href="#" mat-button>Menu Item 2</a>
+      </div>
+      <div fxShow="true" fxHide.gt-sm="true">
+        <a href="#" (click)="sidenav.toggle()">Show Side Menu</a>
+      </div>
+    </mat-toolbar>
+    <mat-sidenav-container fxFlexFill class="example-container">
+      <mat-sidenav #sidenav fxLayout="column">
+        <div fxLayout="column">
+          <a (click)="sidenav.toggle()" href="#" mat-button>Close</a>
+          <a href="#" mat-button>Menu Item 1</a>
+          <a href="#" mat-button>Menu Item 2</a>
+        </div>
+      </mat-sidenav>
+      <mat-sidenav-content fxFlexFill>Main content</mat-sidenav-content>
+    </mat-sidenav-container>
+  </div> -->
+  <app-toolbar></app-toolbar>
