--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,66 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+/* TEMPLATE DE ANGULAR MATERIAL */
+/* @import "~@angular/material/prebuilt-themes/indigo-pink.css"; */
+
+
+body{
+	background-color: #DFD5D3;
+	font-family: 'Roboto', sans-serif;
+	margin:0px !important;
+}
+ 
+.app-header{
+	color: #fff;
+    background-color: #DFD5D3;
+    text-align: center;
+    padding: 1%;
+	-webkit-box-shadow: 2px 4px 58px -20px rgba(0,0,0,1);
+	-moz-box-shadow: 2px 4px 58px -20px rgba(0,0,0,1);
+	box-shadow: 2px 4px 58px -20px rgba(0,0,0,1);
+}
+ 
+.login-container{
+	width: 100%;
+  	height:400px;
+  	padding: 0% !important;
+	background-color: #fff;
+	-webkit-box-shadow: 2px 4px 58px -20px rgba(0,0,0,1);
+	-moz-box-shadow: 2px 4px 58px -20px rgba(0,0,0,1);
+	box-shadow: 2px 4px 58px -20px rgba(0,0,0,1);
+}
+ 
+.login-box-header{
+	width: auto;
+    height: 20%;
+    background-color: #47A20C;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 3em;
+    padding: 2%;
+    color: #fff;
+}
+ 
+.login-box-body{
+	width: auto;
+	height:100%;
+	padding: 5% 5% 5% 5%;
+	color: #d2d2d2;
+}
+ 
+.login-icon{
+	margin-top: -2px;
+}
+ 
+.justifier {
+	width: 100%;
+	padding-bottom: 2%;
+}
+ 
+.login-button{
+	width: 100%;
+	padding:1.5% !important;	
+    background-color: #47A20C;
+    font-size: 1.5em;
+    color: #fff !important;
+}
