fix(all): fix style of logo

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,7 +12,7 @@
     <mat-card fxLayout="column"  fxFlex="100%">
 
       <mat-card-header>
-        <mat-card-title fxLayout="column">Web Consultor</mat-card-title>
+        <mat-card-title fxLayout="column"> <h2 color="primary">Web Consultor</h2></mat-card-title>
       </mat-card-header>
       <mat-card-content fxLayout="column">
         <mat-form-field >
