--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -11,7 +11,7 @@
     <div color="accent" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="1rem">
       <div>
         <a>
-          <span class="lead">Logo</span>
+          <span class="logo"></span>
         </a>
       </div>
     </div>
