--- a/src/app/shared/toolbar/toolbar.component.css
+++ b/src/app/shared/toolbar/toolbar.component.css
@@ -25,7 +25,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: -1;
+    z-index
     min-height: 90vh;
   }
   
@@ -48,4 +48,13 @@
     border-style: solid;
     border-image:
     linear-gradient(to top, #c1c1c1, rgba(0, 0, 0, 0)) 1 100%
+  }
+
+  .logo{
+    display: block;
+    height: 4em;
+    background: url("../../../assets/logo-claro.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 12rem;
   }
