--- a/src/styles.css
+++ b/src/styles.css
@@ -41,26 +41,10 @@ body{
     color: #fff;
 }
  
-/* .login-box-body{
+.login-box-body{
 	width: auto;
 	height:100%;
 	padding: 5% 5% 5% 5%;
 	color: #d2d2d2;
 }
  
-.login-icon{
-	margin-top: -2px;
-}
- 
-.justifier {
-	width: 100%;
-	padding-bottom: 2%;
-}
- 
-.login-button{
-	width: 100%;
-	padding:1.5% !important;	
-    background-color: #47A20C;
-    font-size: 1.5em;
-    color: #fff !important;
-} */
